<resources>
    <string name="app_name">Kasirku</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="history">History</string>
    <string name="stock">Stock</string>
    <string name="kasir">Kasir</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create">create</string>
    <string name="file">file</string>
    <string name="open">Open</string>
    <string name="harga">Harga</string>
    <string name="detail">Detail</string>
    <string name="pilih">Pilih</string>
    <string name="nomor">nomor pesanan </string>
    <string name="nomorAntrian">00000</string>
    <string name="tanggal">waktu pemesanan</string>
    <string name="waktu">02:10:40</string>
    <string name="tambah">+</string>
    <string name="kurang">-</string>
    <string name="Tambah">Tambah</string>
    <string name="namaBarang">Nama Barang</string>
    <string name="baru">Tambah</string>
    <string name="cetak">Cetak</string>
    <string name="_0">0</string>
    <string name="list_stock" />
    <string name="jenis" >Jenis</string>
    <string name="register" >Register</string>
    <string name="text">Text</string>
    <string name="tugas">Tugas</string>
    <string name="del">Del</string>
    <string name="Ubah">Ubah</string>
    <string name="ubah">Ubah</string>
    <string name="batal">Batal</string>
    <string name="listbarang">Listbarang</string>
    <string name="barang">Barang</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="kembali">kembali</string>
    <string name="tipe_barang">tipe barang</string>

    <array name="pilihan">
        <item>detail</item>
        <item>ubah</item>
        <item>hapus</item>
    </array>
    <array name="pilihanTugas">
        <item>stock</item>
        <item>kasir</item>
        <item>history</item>
    </array>
</resources>