<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".stock.StockUbahFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ubahBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Ubah"
            android:textSize="40dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="400dp"
        android:layout_height="451dp"
        android:layout_margin="10dp"
        android:layout_marginTop="32dp"
        android:layout_weight="2"
        android:background="@drawable/bunder"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/gambarItem"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/namaItem"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/namaBarang"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/tipeBarang"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/jenis"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/hargabarang"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/harga"
            android:inputType="number"
            android:minHeight="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonUbahItem"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="72dp"
        android:gravity="center"
        android:text="@string/ubah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBatal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

    </Button>

    <Button
        android:id="@+id/buttonBatal"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/batal"
        app:layout_constraintEnd_toStartOf="@+id/buttonUbahItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>