<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="2">

            <TextView
                android:id="@+id/tambahBarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Tambah" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="2"
        android:background="@drawable/bunder"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="20dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="85dp">

        <ImageView
            android:id="@+id/gambarItem"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/namaItem"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/namaBarang"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/hargaBarang"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/harga"
            android:inputType="text"
            android:minHeight="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonTambahItem"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="550dp"
        android:text="@string/baru">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>