<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stock.StockDetailFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tambahBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/detail"
            android:textSize="40dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="400dp"
        android:layout_height="451dp"
        android:layout_margin="10dp"
        android:layout_marginTop="32dp"
        android:layout_weight="2"
        android:background="@drawable/bunder"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/gambarItem"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namaBarang"
            android:textColor="@color/birukasirku"
            android:layout_gravity="left" />
        <TextView
            android:id="@+id/namaItem"
            android:layout_width="300dp"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipe_barang"
            android:textColor="@color/birukasirku"
            android:layout_gravity="left" />
        <TextView
            android:textSize="30sp"
            android:id="@+id/tipeBarang"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:layout_gravity="left"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga"
            android:textColor="@color/birukasirku"
            android:layout_gravity="left" />
        <TextView
            android:textSize="30sp"
            android:id="@+id/hargabarang"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />
    </LinearLayout>

    <Button
        android:id="@+id/kembali"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/kembali"
        android:backgroundTint="@color/birukasirku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>