<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kasir.KasirFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logout"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:layout_margin="16dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:src="@drawable/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/kasir"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="center"
                android:textAllCaps="true"
                android:text="@string/kasir"
                android:textSize="40dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/kasirList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                tools:listitem="@layout/kasir_item" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/totalHarga"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/harga"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/harga"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/_0"
                    android:textSize="20dp" />
            </LinearLayout>


            <Button
                android:id="@+id/detail"
                android:layout_width="159dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/detail" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>